[gd_scene load_steps=21 format=3 uid="uid://bkrfy0yc6uqg6"]

[ext_resource type="Script" path="res://Player.gd" id="1_dqu2c"]
[ext_resource type="AudioStream" uid="uid://dke8wtxj20y43" path="res://Audio/SFX - Death Explosion.ogg" id="2_62qx4"]
[ext_resource type="AudioStream" uid="uid://dxdy4ih82lfef" path="res://Audio/SFX - Success.ogg" id="3_p15t7"]
[ext_resource type="AudioStream" uid="uid://cffwjh0nwdkcn" path="res://Audio/SFX - Main engine thrust.ogg" id="4_7nwpj"]
[ext_resource type="PackedScene" uid="uid://c8ox1y01vn8q7" path="res://Particles/booster_particles.tscn" id="5_kk2uu"]
[ext_resource type="PackedScene" uid="uid://dcecb8hw7dbrv" path="res://Particles/explosion_particles.tscn" id="6_yy0fv"]
[ext_resource type="PackedScene" uid="uid://jfwajmrh6ca7" path="res://Particles/success_particles.tscn" id="7_bvmu2"]
[ext_resource type="Material" uid="uid://rrwwhomiv8mr" path="res://ShipRedMaterial'.tres" id="8_fg4i0"]
[ext_resource type="Material" uid="uid://5vblikq0p36t" path="res://ShipBlueMaterial.tres" id="9_l5vbp"]

[sub_resource type="CylinderMesh" id="CylinderMesh_lkyn2"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_oq5sm"]

[sub_resource type="CylinderMesh" id="CylinderMesh_hsu0s"]
top_radius = 0.2
bottom_radius = 0.2
height = 1.5

[sub_resource type="PrismMesh" id="PrismMesh_vn37p"]
left_to_right = 1.0
size = Vector3(0.5, 0.5, 0.3)

[sub_resource type="CylinderMesh" id="CylinderMesh_g6l5p"]
top_radius = 0.0
bottom_radius = 0.2
height = 0.5

[sub_resource type="TorusMesh" id="TorusMesh_ycqlq"]
inner_radius = 0.29
outer_radius = 0.384

[sub_resource type="TorusMesh" id="TorusMesh_5ua0q"]
inner_radius = 0.193
outer_radius = 0.292

[sub_resource type="CylinderMesh" id="CylinderMesh_skd1t"]
top_radius = 0.0
bottom_radius = 0.41
height = 1.495

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8rqgn"]
albedo_color = Color(0, 1, 1, 1)
roughness = 0.0

[sub_resource type="SphereMesh" id="SphereMesh_5l73e"]
radius = 0.2
height = 0.5

[sub_resource type="PrismMesh" id="PrismMesh_y1b4h"]
left_to_right = 1.11022e-16
size = Vector3(0.5, 0.5, 0.3)

[node name="Player" type="RigidBody3D"]
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
max_contacts_reported = 10
contact_monitor = true
linear_damp = 1.0
angular_damp = 3.0
script = ExtResource("1_dqu2c")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CylinderMesh_lkyn2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_oq5sm")

[node name="ExplosionAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_62qx4")

[node name="SuccessAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_p15t7")

[node name="RocketAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_7nwpj")

[node name="BoosterParticles" parent="." instance=ExtResource("5_kk2uu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, -1, 2.08165e-12)
emitting = true

[node name="LeftBooosterParticles" parent="." instance=ExtResource("5_kk2uu")]
transform = Transform3D(0.971184, 0.23833, 0, -0.23833, 0.971184, 0, 0, 0, 1, -0.444921, -0.96199, 2.08165e-12)
emitting = true

[node name="RightBoosterParticles" parent="." instance=ExtResource("5_kk2uu")]
transform = Transform3D(0.976781, -0.214241, 0, 0.214241, 0.976781, 0, 0, 0, 1, 0.451831, -0.965446, 2.08165e-12)
emitting = true

[node name="ExplosionParticles" parent="." instance=ExtResource("6_yy0fv")]

[node name="SuccessParticles" parent="." instance=ExtResource("7_bvmu2")]

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, -0.25, 2.08165e-12)
material_override = ExtResource("8_fg4i0")
mesh = SubResource("CylinderMesh_hsu0s")

[node name="Left_thruster" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1.03782, 0, 0, 0, 1, 0, 0, 0, 1, -0.389184, -0.509342, 2.08165e-12)
material_override = ExtResource("9_l5vbp")
mesh = SubResource("PrismMesh_vn37p")

[node name="Cockpit" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
material_override = ExtResource("9_l5vbp")
mesh = SubResource("CylinderMesh_g6l5p")
skeleton = NodePath("../..")

[node name="support_ring" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.530217, 0)
material_override = ExtResource("9_l5vbp")
mesh = SubResource("TorusMesh_ycqlq")

[node name="support_ring2" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.168045, 0)
material_override = ExtResource("9_l5vbp")
mesh = SubResource("TorusMesh_5ua0q")

[node name="Lower_body" type="MeshInstance3D" parent="Body"]
material_override = ExtResource("8_fg4i0")
mesh = SubResource("CylinderMesh_skd1t")

[node name="Window" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.327415, 0.0838292)
material_override = SubResource("StandardMaterial3D_8rqgn")
mesh = SubResource("SphereMesh_5l73e")

[node name="Right_thruster" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1.03782, 0, 0, 0, 1, 0, 0, 0, 1, 0.389184, -0.509342, 2.08165e-12)
material_override = ExtResource("9_l5vbp")
mesh = SubResource("PrismMesh_y1b4h")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
